# pyraragi

./: .env.example  .env.local.example  .env.postgres-local.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: archives.py  conversions.py  jobs.py  library.py  views.py
app/archive/: identity.py  reader.py  types.py  zip_reader.py
app/core/: config.py
app/db/: init_db.py  session.py
app/image/: fingerprints.py  thumbnails.py
app/models/: __init__.py  archive.py
app/repositories/: archives.py
app/schemas/: archive.py
app/services/: background_jobs.py  conversions.py  importer.py  library_jobs.py  pages.py
app/workers/: celery_app.py  tasks.py
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.vue  main.js  styles.css
frontend/src/api/: client.js
frontend/src/components/: ArchiveCard.vue  ArchiveList.vue  PageControls.vue
frontend/src/views/: ConversionView.vue  JobsView.vue  LibraryView.vue  ReaderView.vue  UploadView.vue
scripts/: convert-to-zip.sh
