[project]
name = "pyrragi"
version = "0.1.0"
description = "A LANraragi-inspired archive library built with FastAPI, PostgreSQL, Redis, Celery, and Vue."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.14.0",
    "celery[redis]==5.4.0",
    "fastapi==0.115.6",
    "numpy>=2.4.6",
    "pillow==11.1.0",
    "psycopg[binary]==3.2.3",
    "pydantic-settings==2.7.1",
    "python-multipart==0.0.20",
    "pyvips>=3.1.1",
    "redis==5.2.1",
    "scipy>=1.17.1",
    "sqlalchemy==2.0.36",
    "uvicorn[standard]==0.34.0",
]

[tool.uv]
package = false
